fix guild overflow

--- a/src/app/pages/channels/components/sidebar/sidebar.component.css
+++ b/src/app/pages/channels/components/sidebar/sidebar.component.css
@@ -16,6 +16,10 @@ mat-sidenav {
   background-color: var(--background-tertiary);
 }
 
+mat-sidenav-content {
+  overflow-y: hidden;
+}
+
 .icon-wrapper span {
   text-align: center;
   font-size: 32px;
