--- a/src/app/pages/channels/guild/member-list/member-list.component.css
+++ b/src/app/pages/channels/guild/member-list/member-list.component.css
@@ -1,4 +1,5 @@
 .member-list {
+  overflow-y: auto;
   background-color: var(--background-secondary);
 
   width: 100%;
